Compositor: Crash previewing image node pointing to non-existing file #127243

Closed
opened 2024-09-06 13:27:26 +02:00 by Mingwei Lim · 2 comments

System Information
Operating system: macOS-14.6.1-arm64-arm-64bit 64 Bits
Graphics card: Metal API Apple M1 Max 1.2

Blender Version
Broken: version: 4.3.0 Alpha, branch: main, commit date: 2024-09-05 23:07, hash: fbf95a05d5f1
Worked: (newest version of Blender that worked as expected)

Short description of error
Blender crashes instantly if compositing setup uses an image node which points to a file that does not exist.

Exact steps for others to reproduce the error

  1. Create compositor setup as follows, then pick an image file from disk
  2. Save .blend file, close Blender and delete image file the image node is using
  3. Open .blend file
  4. Under 3D Viewport, enable either Material Preview / Rendered in viewport shading mode
  5. Set compositor mode to Always
  6. Tick Use Nodes
  7. Blender crashes immediately

Or open the attached .blend file then tick Use Nodes

image

**System Information** Operating system: macOS-14.6.1-arm64-arm-64bit 64 Bits Graphics card: Metal API Apple M1 Max 1.2 **Blender Version** Broken: version: 4.3.0 Alpha, branch: main, commit date: 2024-09-05 23:07, hash: `fbf95a05d5f1` Worked: (newest version of Blender that worked as expected) **Short description of error** Blender crashes instantly if compositing setup uses an image node which points to a file that does not exist. **Exact steps for others to reproduce the error** 1. Create compositor setup as follows, then pick an image file from disk 2. Save .blend file, close Blender and delete image file the image node is using 3. Open .blend file 4. Under 3D Viewport, enable either `Material Preview` / `Rendered` in viewport shading mode 5. Set compositor mode to `Always` 6. Tick `Use Nodes` 7. Blender crashes immediately Or open the attached .blend file then tick `Use Nodes` ![image](/attachments/3ae1a1f0-a6e9-45ee-8baa-4eb9e1ff5f2c)
Mingwei Lim added the
Status
Needs Triage
Severity
Normal
Type
Bug
labels 2024-09-06 13:27:27 +02:00
Iliya Katushenock added the
Interest
Compositing
Interest
VFX & Video
labels 2024-09-06 19:14:12 +02:00
Member

Hi, thanks for the report. Can confirm the crash.

Hi, thanks for the report. Can confirm the crash.
Member

Early exit from execution should fix the crash if tex_/texture_ is nullptr.
cc @OmarEmaraDev

Early exit from execution should fix the crash if `tex_/texture_` is nullptr. cc @OmarEmaraDev
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-09-30 13:45:05 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#127243
No description provided.